--- a/themes/uthark2021/assets/css/_body_header.scss
+++ b/themes/uthark2021/assets/css/_body_header.scss
@@ -3,18 +3,21 @@
 @import "color-vars";
 
 body header.site {
+
   h1 {
     a {
       @include set-color($header1-light, $header1-dark);
       &:visited{
         @include set-color($header1-light, $header1-dark);
       }
-
     }
-
+    @include md {
+      font-size: 4em;
+    }
   }
 
   h2 {
     @include set-color($header2-light, $header2-dark);
+
   }
 }
